--- a/mm2src/mm2_main/Cargo.toml
+++ b/mm2src/mm2_main/Cargo.toml
@@ -124,6 +124,8 @@ winapi = "0.3"
 mm2_test_helpers = { path = "../mm2_test_helpers" }
 mocktopus = "0.8.0"
 testcontainers = { git = "https://github.com/KomodoPlatform/mm2-testcontainers-rs.git" }
+coins = { path = "../coins", features = ["for-tests"] }
+coins_activation = { path = "../coins_activation", features = ["for-tests"] }
 
 [build-dependencies]
 chrono = "0.4"
