--- a/mm2src/coins/Cargo.toml
+++ b/mm2src/coins/Cargo.toml
@@ -44,9 +44,9 @@ derive_more = "0.99"
 ed25519-dalek = "1.0.1"
 enum_derives = { path = "../derives/enum_derives" }
 ethabi = { version = "17.0.0" }
-ethcore-transaction = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git" }
+ethcore-transaction = { git = "https://github.com/dimxy/mm2-parity-ethereum.git", branch = "eip1559-support" }
 ethereum-types = { version = "0.13", default-features = false, features = ["std", "serialize"] }
-ethkey = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git" }
+ethkey = { git = "https://github.com/dimxy/mm2-parity-ethereum.git", branch = "eip1559-support" }
 # Waiting for https://github.com/rust-lang/rust/issues/54725 to use on Stable.
 #enum_dispatch = "0.1"
 futures01 = { version = "0.1", package = "futures" }
