--- a/mm2src/mm2_eth/Cargo.toml
+++ b/mm2src/mm2_eth/Cargo.toml
@@ -8,7 +8,7 @@ doctest = false
 
 [dependencies]
 ethabi = { version = "17.0.0" }
-ethkey = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git" }
+ethkey = { git = "https://github.com/dimxy/mm2-parity-ethereum.git", branch = "eip1559-support" }
 hex = "0.4.2"
 indexmap = "1.7.0"
 itertools = "0.10"
