--- a/mm2src/mm2_net/Cargo.toml
+++ b/mm2src/mm2_net/Cargo.toml
@@ -17,7 +17,7 @@ bytes = "1.1"
 cfg-if = "1.0"
 common = { path = "../common" }
 derive_more = "0.99"
-ethkey = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git" }
+ethkey = { git = "https://github.com/dimxy/mm2-parity-ethereum.git", branch = "eip1559-support" }
 futures = { version = "0.3", package = "futures", features = ["compat", "async-await", "thread-pool"] }
 http = "0.2"
 lazy_static = "1.4"
