--- a/mm2src/mm2_eth/Cargo.toml
+++ b/mm2src/mm2_eth/Cargo.toml
@@ -8,7 +8,7 @@ doctest = false
 
 [dependencies]
 ethabi = { version = "17.0.0" }
-ethkey = { git = "https://github.com/dimxy/mm2-parity-ethereum.git", branch = "eip1559-support" }
+ethkey = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git" }
 hex = "0.4.2"
 indexmap = "1.7.0"
 itertools = "0.10"
@@ -16,5 +16,4 @@ mm2_err_handle = { path = "../mm2_err_handle" }
 secp256k1 = { version = "0.20", features = ["recovery"] }
 serde = "1.0"
 serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
-# web3 = { git = "https://github.com/KomodoPlatform/rust-web3", tag = "v0.19.0", default-features = false }
-web3 = { git = "https://github.com/dimxy/rust-web3", default-features = false, branch = "add-chain-id" }
+web3 = { git = "https://github.com/KomodoPlatform/rust-web3", tag = "v0.20.0", default-features = false }
