--- a/mm2src/mm2_main/Cargo.toml
+++ b/mm2src/mm2_main/Cargo.toml
@@ -124,8 +124,7 @@ winapi = "0.3"
 mm2_test_helpers = { path = "../mm2_test_helpers" }
 mocktopus = "0.8.0"
 testcontainers = "0.15.0"
-# web3 = { git = "https://github.com/KomodoPlatform/rust-web3", tag = "v0.19.0", default-features = false, features = ["http"] }
-web3 = { git = "https://github.com/dimxy/rust-web3", default-features = false, features = ["http"], branch = "add-chain-id" }
+web3 = { git = "https://github.com/KomodoPlatform/rust-web3", tag = "v0.20.0", default-features = false, features = ["http"] }
 
 [build-dependencies]
 chrono = "0.4"
