--- a/mm2src/coins/Cargo.toml
+++ b/mm2src/coins/Cargo.toml
@@ -73,7 +73,7 @@ mm2_net = { path = "../mm2_net" }
 mm2_number = { path = "../mm2_number"}
 mm2_rpc = { path = "../mm2_rpc" }
 mm2_state_machine = { path = "../mm2_state_machine" }
-mocktopus = "0.8.0"
+mocktopus = { version = "0.8.0", optional = true }
 num-traits = "0.2"
 parking_lot = { version = "0.12.0", features = ["nightly"] }
 primitives = { path = "../mm2_bitcoin/primitives" }
@@ -166,6 +166,7 @@ winapi = "0.3"
 
 [dev-dependencies]
 mm2_test_helpers = { path = "../mm2_test_helpers" }
+mocktopus = { version = "0.8.0" }
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wagyu-zcash-parameters = { version = "0.2" }
