--- a/mm2src/mm2_event_stream/Cargo.toml
+++ b/mm2src/mm2_event_stream/Cargo.toml
@@ -10,6 +10,7 @@ common = { path = "../common" }
 futures = { version = "0.3", default-features = false }
 parking_lot = "0.12"
 serde = { version = "1", features = ["derive", "rc"] }
+serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
 tokio = { version = "1", features = ["sync"] }
 
 [dev-dependencies]
