--- a/mm2src/mm2_main/Cargo.toml
+++ b/mm2src/mm2_main/Cargo.toml
@@ -98,6 +98,7 @@ sp-trie = { version = "6.0", default-features = false }
 trie-db = { version = "0.23.1", default-features = false }
 trie-root = "0.16.0"
 uuid = { version = "1.2.2", features = ["fast-rng", "serde", "v4"] }
+mocktopus = { version = "0.8.0", optional = true } # for mm2_main integration tests
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 instant = { version = "0.1.12", features = ["wasm-bindgen"] }
@@ -138,3 +139,7 @@ chrono = "0.4"
 gstuff = { version = "0.7", features = ["nightly"] }
 prost-build = { version = "0.11", default-features = false }
 regex = "1"
+
+[[test]]
+name = "docker_tests_main"
+required-features = [ "run-docker-tests", "mocktopus" ]
