add swap negotiation protocol version support and eth tx type activation by remote version

--- a/mm2src/mm2_main/Cargo.toml
+++ b/mm2src/mm2_main/Cargo.toml
@@ -24,6 +24,8 @@ default = []
 trezor-udp = ["crypto/trezor-udp"] # use for tests to connect to trezor emulator over udp
 run-device-tests = []
 enable-sia = []
+test-use-old-maker = []
+test-use-old-taker = []
 
 [dependencies]
 async-std = { version = "1.5", features = ["unstable"] }
