--- a/.github/workflows/pr-lint.yml
+++ b/.github/workflows/pr-lint.yml
@@ -48,9 +48,10 @@ jobs:
       - name: Check PR labels
         env:
           LABEL_NAMES: ${{ toJson(github.event.pull_request.labels.*.name) }}
-        echo "labels sum:" 
-        echo contains(env.LABEL_NAMES, 'under review') + contains(env.LABEL_NAMES, 'in progress')
-        if: (contains(env.LABEL_NAMES, 'under review') + contains(env.LABEL_NAMES, 'in progress')) != 1
         run: |
-          echo "PR must have "exactly one" of these labels: ['under review', 'in progress']."
-          exit 1
+          echo "labels sum" 
+          echo contains(env.LABEL_NAMES, 'under review') + contains(env.LABEL_NAMES, 'in progress')
+          if: (contains(env.LABEL_NAMES, 'under review') + contains(env.LABEL_NAMES, 'in progress')) != 1
+          run: |
+            echo "PR must have "exactly one" of these labels: ['under review', 'in progress']."
+            exit 1
