--- a/.github/workflows/pr-lint.yml
+++ b/.github/workflows/pr-lint.yml
@@ -50,7 +50,7 @@ jobs:
           LABEL_NAMES: ${{ toJson(github.event.pull_request.labels.*.name) }}
         run: |
           echo "labels sum" 
-          echo contains(env.LABEL_NAMES, 'under review') + contains(env.LABEL_NAMES, 'in progress')
+          # echo contains(env.LABEL_NAMES, 'under review') + contains(env.LABEL_NAMES, 'in progress')
           if: (contains(env.LABEL_NAMES, 'under review') + contains(env.LABEL_NAMES, 'in progress')) != 1
           run: |
             echo "PR must have "exactly one" of these labels: ['under review', 'in progress']."
