--- a/.github/workflows/pr-lint.yml
+++ b/.github/workflows/pr-lint.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Check PR labels
         env:
           LABEL_NAMES: ${{ toJson(github.event.pull_request.labels.*.name) }}
-        if: (contains(env.LABEL_NAMES, 'under review') != contains(env.LABEL_NAMES, 'in progress'))
+        if: (contains(env.LABEL_NAMES, 'under review') + contains(env.LABEL_NAMES, 'in progress'))
         run: |
           echo "PR must have "exactly one" of these labels: ['under review', 'in progress']."
           exit 1
