review (mariocynicys): move TestCoin to for-tests feature, use for-tests to activate mocktopus

--- a/mm2src/coins/Cargo.toml
+++ b/mm2src/coins/Cargo.toml
@@ -12,7 +12,7 @@ enable-sia = [
 ]
 default = []
 run-docker-tests = []
-for-tests = []
+for-tests = ["dep:mocktopus"]
 
 [lib]
 path = "lp_coins.rs"
