--- a/mm2src/coins/Cargo.toml
+++ b/mm2src/coins/Cargo.toml
@@ -163,6 +163,8 @@ winapi = "0.3"
 [dev-dependencies]
 mm2_test_helpers = { path = "../mm2_test_helpers" }
 mm2_p2p = { path = "../mm2_p2p", features = ["application"] }
+proptest = "1.6.0"
+# proptest-derive = "0.3.0"
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wagyu-zcash-parameters = { version = "0.2" }
