--- a/Cargo.toml
+++ b/Cargo.toml
@@ -186,6 +186,7 @@ sp-trie = { version = "6.0", default-features = false }
 sql-builder = "3.1.1"
 syn = "1.0"
 sysinfo = "0.28"
+tempfile = "3.20.0"
 # using the same version as cosmrs
 tendermint-rpc = { version = "0.35", default-features = false }
 testcontainers = "0.15.0"
