feat(tests): zcoin unit test to validate dex fee (#2460)
This commit introduces a framework for creating zcoin unit tests and makes the following key changes:
- A new unit test has been added to validate the address-checking logic within the `validate_dex_fee_output` function.
- The multicore feature has been removed from the zcash_proofs dependency for the wasm32 target to resolve test errors.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -228,7 +228,7 @@ zcash_client_backend = { git = "https://github.com/komodoplatform/librustzcash.g
 zcash_client_sqlite = { git = "https://github.com/KomodoPlatform/librustzcash.git", tag = "k-1.4.2" }
 zcash_extras = { git = "https://github.com/komodoplatform/librustzcash.git", tag = "k-1.4.2" }
 zcash_primitives =  { git = "https://github.com/komodoplatform/librustzcash.git", tag = "k-1.4.2", features = ["transparent-inputs"] }
-zcash_proofs = { git = "https://github.com/KomodoPlatform/librustzcash.git", tag = "k-1.4.2", default-features = false, features = ["local-prover", "multicore"] }
+zcash_proofs = { git = "https://github.com/KomodoPlatform/librustzcash.git", tag = "k-1.4.2", default-features = false }
 x25519-dalek = { version = "2.0", features = ["static_secrets"] }
 zeroize = { version = "1.5", features = ["zeroize_derive"] }
 
