--- a/mm2src/mm2_main/Cargo.toml
+++ b/mm2src/mm2_main/Cargo.toml
@@ -134,6 +134,7 @@ coins_activation = { path = "../coins_activation", features = ["for-tests"] }
 common = { path = "../common", features = ["for-tests"] }
 mm2_test_helpers = { path = "../mm2_test_helpers" }
 trading_api = { path = "../trading_api", features = ["for-tests"] }
+env_logger.workspace = true
 mocktopus.workspace = true
 testcontainers.workspace = true
 web3 = { workspace = true, default-features = false, features = ["http-rustls-tls"] }
