feat(protocol): [0] solana support (#2586)
Introduce initial Solana protocol infrastructure behind `enable-solana` feature flag.
- Add Solana module and enum variant; wire into activation scaffolding.
- Feature disabled by default; no functional changes or impact on binaries.

--- a/mm2src/coins/Cargo.toml
+++ b/mm2src/coins/Cargo.toml
@@ -10,6 +10,7 @@ enable-sia = [
 	"dep:blake2b_simd",
 	"dep:sia-rust"
 ]
+enable-solana = []
 default = []
 run-docker-tests = []
 for-tests = ["dep:mocktopus"]
