fix(Trezor): fix utxo and eth calls due to firmware changes (#2565)
- UTXO: set InputScriptType (SpendAddress/SpendWitness) to avoid DataError
- EVM: use bitcoin GetPublicKey instead of broken EthereumGetPublicKey (Safe/T)
- EVM proto: mark address_n as non-packed; fix get_new_address DataError
- deps(trezor): bump prost to 0.14.1 (keep 0.12.x for other crates)

--- a/mm2src/trezor/Cargo.toml
+++ b/mm2src/trezor/Cargo.toml
@@ -14,7 +14,7 @@ derive_more.workspace = true
 futures = { workspace = true, features = ["compat", "async-await"] }
 hw_common = { path = "../hw_common" }
 mm2_err_handle = { path = "../mm2_err_handle" }
-prost.workspace = true
+prost = "0.14.1"
 rand = { workspace = true, features = ["std", "wasm-bindgen"] }
 rpc_task = { path = "../rpc_task" }
 serde.workspace = true
