feat(ci): add universal macos build

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -188,6 +188,58 @@ jobs:
           SAFE_BRANCH_NAME=$(echo "$BRANCH_NAME" | tr '/' '-')
           python3 ./scripts/ci/upload_artifact.py "$SAFE_BRANCH_NAME" "/uploads/$SAFE_BRANCH_NAME"
 
+  mac-universal:
+    timeout-minutes: 60
+    runs-on: macos-latest
+    needs: [mac-x86-64, mac-arm64] 
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install build deps
+        uses: ./.github/actions/deps-install
+        with:
+          deps: ('python3')
+
+      - name: Calculate build tag (commit hash) for PR commit
+        if: github.event_name == 'pull_request'
+        run: echo "KDF_BUILD_TAG=$(git rev-parse --short=7 ${{ github.event.pull_request.head.sha }})" >> $GITHUB_ENV
+
+      - name: Calculate build tag (commit hash) for merge commit
+        if: github.event_name != 'pull_request'
+        run: echo "KDF_BUILD_TAG=$(git rev-parse --short=7 HEAD)" >> $GITHUB_ENV
+
+      - name: Make universal kdf build output
+        run: |
+          AARCH64_BIN="target/aarch64-apple-darwin/release/kdf"
+          X86_64_BIN="target/x86_64-apple-darwin/release/kdf"
+          OUT_DIR="target/universal-apple-darwin/release/kdf"
+          OUT_BIN="$OUT_DIR/kdf"
+          mkdir target/universal-apple-darwin/release
+          lipo -create "$AARCH64_BIN" "$X86_64_BIN" -output "$OUT_BIN"
+          lipo -info "$OUT_BIN"
+
+      - name: Compress kdf build output
+        env:
+          AVAILABLE: ${{ secrets.FILE_SERVER_KEY }}
+        if: ${{ env.AVAILABLE != '' }}
+        run: |
+          NAME="kdf_$KDF_BUILD_TAG-mac-universal.zip"
+          zip $NAME target/universal-apple-darwin/release/kdf -j
+          SAFE_DIR_NAME=$(echo "$BRANCH_NAME" | tr '/' '-')
+          mkdir $SAFE_DIR_NAME
+          mv $NAME ./$SAFE_DIR_NAME/
+
+      - name: Upload build artifact
+        env:
+          FILE_SERVER_HOST: ${{ secrets.FILE_SERVER_HOST }}
+          FILE_SERVER_USERNAME: ${{ secrets.FILE_SERVER_USERNAME }}
+          FILE_SERVER_PORT: ${{ secrets.FILE_SERVER_PORT }}
+          FILE_SERVER_KEY: ${{ secrets.FILE_SERVER_KEY }}
+        if: ${{ env.FILE_SERVER_KEY != '' }}
+        run: |
+          SAFE_BRANCH_NAME=$(echo "$BRANCH_NAME" | tr '/' '-')
+          python3 ./scripts/ci/upload_artifact.py "$SAFE_BRANCH_NAME" "/uploads/$SAFE_BRANCH_NAME"
+
   win-x86-64:
     timeout-minutes: 60
     runs-on: windows-latest
