fix(ci): add upload/download macos build

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -114,6 +114,12 @@ jobs:
       - name: Build
         run: cargo build --release --target x86_64-apple-darwin
 
+      - name: Upload build for next job
+        uses: actions/upload-artifact@v4
+        with:
+          name: x86_64-apple-darwin-release-kdf
+          path: target/x86_64-apple-darwin/release/kdf
+
       - name: Compress kdf build output
         env:
           AVAILABLE: ${{ secrets.FILE_SERVER_KEY }}
@@ -166,6 +172,12 @@ jobs:
       - name: Build
         run: cargo build --release --target aarch64-apple-darwin
 
+      - name: Upload build for next job
+        uses: actions/upload-artifact@v4
+        with:
+          name: aarch64-apple-darwin-release-kdf
+          path: target/aarch64-apple-darwin/release/kdf
+
       - name: Compress kdf build output
         env:
           AVAILABLE: ${{ secrets.FILE_SERVER_KEY }}
@@ -207,6 +219,16 @@ jobs:
       - name: Calculate build tag (commit hash) for merge commit
         if: github.event_name != 'pull_request'
         run: echo "KDF_BUILD_TAG=$(git rev-parse --short=7 HEAD)" >> $GITHUB_ENV
+
+      - name: Download macos x86_64 build
+        uses: actions/download-artifact@v5
+        with:
+          name: x86_64-apple-darwin-release-kdf
+
+      - name: Download macos aarch64 build
+        uses: actions/download-artifact@v5
+        with:
+          name: aarch64-apple-darwin-release-kdf
 
       - name: Make universal kdf build output
         run: |
