fix(ci): download path

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -224,11 +224,13 @@ jobs:
         uses: actions/download-artifact@v5
         with:
           name: x86_64-apple-darwin-release-kdf
+          path: target/x86_64-apple-darwin/release/kdf
 
       - name: Download macos aarch64 build
         uses: actions/download-artifact@v5
         with:
           name: aarch64-apple-darwin-release-kdf
+          path: target/aarch64-apple-darwin/release/kdf
 
       - name: Make universal kdf build output
         run: |
