fix(ci): add missed uploads

--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -109,6 +109,12 @@ jobs:
       - name: Build
         run: cargo build --release --target x86_64-apple-darwin
 
+      - name: Upload build for next job
+        uses: actions/upload-artifact@v4
+        with:
+          name: x86_64-apple-darwin-release-kdf
+          path: target/x86_64-apple-darwin/release/kdf
+
       - name: Compress kdf build output
         run: |
           NAME="kdf_$KDF_BUILD_TAG-mac-x86-64.zip"
@@ -157,6 +163,12 @@ jobs:
 
       - name: Build
         run: cargo build --release --target aarch64-apple-darwin
+
+      - name: Upload build for next job
+        uses: actions/upload-artifact@v4
+        with:
+          name: aarch64-apple-darwin-release-kdf
+          path: target/aarch64-apple-darwin/release/kdf
 
       - name: Compress kdf build output
         run: |
